css/main.css
/* css reset */

/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* css customization for mobile */

/* The maximum width of the wrapper (container) within each section is 1200px */

.container {
  max-width: 1200px;
  margin: 0 auto;
  
}


/* body customization */
body {
  margin: 0;
  background-color: #000;
}

/* div customization */
.wrapper {
  max-width: 1200px;
  margin: 0 auto;
  position: absolute;
  inset: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: #fff;
  text-align: center;
}

header {
  background-color: #000;
  text-align: center;
  padding: 20px;
}


header img {
  max-width: 250px;
  display: block;
  margin: 0 auto 20px;
}

/* navs customization */

.navs {
  display: flex;
  justify-content: center;
  gap: 50px;
  padding-top: 20px;
}

.navs a {
  font-family: "Lato";
  text-decoration: none;
  color: #fff;
  font-weight: bold;
  font-size: 16px;
  text-transform: uppercase;
}

/* adding hover property for the navs*/

.navs a:hover {
  color: #d69e3d;
}

/* section customization */

.hero {
  position: relative;
  height: 590px;
  overflow: hidden;
}

#hero {
  width: 100%;
  height: 100%;
  display: block;
  object-fit: cover;
  opacity: 0.4;
}

@keyframes fade {
  from {
    opacity: 0;
    transform: translateY(30px);
  }

  to {
    opacity: 1;
    transform: translateY(0px);
  }
}

.wrapper  {
  animation: fade 1s ease-out;
}

.wrapper h1 {
  font-family: "Lato", sans-serif;
  text-transform: uppercase;
  font-size: 34.44px;
  margin-bottom: 10px;
  font-weight: 900;
  margin-top: -35px;
  line-height: 1.4;
  text-align: center;
}

/* p customization */

.wrapper p {
  font-family: "karla";
  font-size: 16px;
  margin-left: 80px;
  margin-right: 80px;
  line-height: 1.4;
}

/* Button customization*/

button {
  font-family: "Karla";
  font-weight: 900;
  text-transform: uppercase;
  font-size: 20px;
  padding: 12px 30px;
  border: none;
  background: white;
  cursor: pointer;
  transition: 0.3s;
  margin-top: 30px;
}

/* adding hover property for the button */

button:hover,
button:focus {
  background: #966f2c;
  color: white;
  outline: 1px solid white;
}

/*welcome to my coffe house customization */

.house {
  background-color: #f3f0e9;
  padding: 80px 10px;
}

/* respecting the requirements of each property */

.house h2 {
  font-family: "Lato";
  text-transform: uppercase;
  color: #d69e3d;
  font-weight: 400;
  font-size: 18px;
  padding-bottom: 15px;
}

.house h3 {
  font-family: "Lato";
  text-transform: uppercase;
  font-weight: bold;
  font-size: 30px;
  padding-bottom: 30px;
  padding-right: 80px;
}

#latte {
  width: 100%;
  height: 100%;
  display: block;

  /* grid customization */
}
.layout {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 20px;
  background-color: #f3f0e9;
  margin-top: 20px;
}

.layout img {
  width: 100%;
}

/*what we offer customization and trying to match the mockup as close as possible */

.gold h2 {
  font-family: "Lato";
  text-transform: uppercase;
  color: #d69e3d;
  font-size: 16px;
  padding-bottom: 15px;
  text-align: center;
  padding-top: 30px;
}

.gold h3 {
  font-size: 30px;
  font-weight: bold;
  font-family: "Lato";
  text-transform: uppercase;
  padding-bottom: 40px;
}

.gold p {
  line-height: 1.4;
  font-family: "Karla";
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: 100px;
}

.gold h4 {
  font-size: 30px;
  font-weight: bold;
  font-family: "Lato";
  text-transform: uppercase;
  padding-bottom: 10px;
  padding-top: 20px;
}

.gold img {
  width: 200px;
}

.gold {
  background-color: #f3f0e9;
  text-align: center;
}

/*our menu and locations customization */

.location {
  position: relative;
}

#shop {
  width: 100%;
  height: 100%;
  display: block;
  opacity: 0.5;
}

.loc {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  padding-top: 80px;
  align-items: center;
  text-align: center;
}

.loc h2 {
  color: #d69e3d;
  font-family: "Lato";
  text-transform: uppercase;
  padding-bottom: 10px;
  font-size: 20px;
}

.loc h3 {
  font-family: "Lato";
  text-transform: uppercase;
  font-weight: bold;
  font-size: 30px;
  color: white;
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: 20px;
}

/* customization for the button for the "our menu" section   */
.loc button {
  margin-top: 20px;
  padding: 15px 30px;
  font-family: "Karla";
  border: none;
  cursor: pointer;
}
.locat h2 {
  padding-top: 80px;
  padding-bottom: 20px;
}
.locat h3 {
  padding-right: 40px;
}

/* customization for the button for the "locations" section  */

.locat button {
  margin-top: 20px;
  padding: 15px 10px;
  font-family: "Karla";
  border: white 1px solid;
  background-color: transparent;
  color: #fff;
  cursor: pointer;
  font-size: 20px;
}

/* adding hover property  */

.locat button:hover,
.locat button:focus {
  background: white;
  color: black;
  outline: 1px solid white;
}

/* aboutus customization h2 h3 h4 p */

.aboutus {
  background-color: #f3f0e9;
}

#abt {
  width: 100%;
  height: 100%;
  display: block;
  padding-left: 10px;
  padding-top: 140px;
  padding-right: 10px;
}

.aboutus h2 {
  padding-top: 20px;
  color: #d69e3d;
  padding-left: 10px;
  font-size: 20px;
  font-family: "Lato";
  text-transform: uppercase;
}

.aboutus h3 {
  padding-top: 15px;
  padding-left: 10px;
  font-family: "Lato";
  text-transform: uppercase;
  font-size: 30px;
  font-weight: bold;
}

.aboutus p {
  padding-top: 10px;
  padding-left: 10px;
  font-family: "Karla";
  font-size: 16px;
  line-height: 1.3;
}

.learn {
  margin-left: 10px;
  font-family: "karla";
  background-color: #000;
  color: #fff;
  margin-bottom: 100px;
}

/*testimonials 1 customization */

.testi h2 {
  color: #d69e3d;
  padding-top: 100px;
  padding-left: 10px;
  font-family: "Lato";
  padding-bottom: 10px;
  text-transform: uppercase;
  font-size: 20px;
}

.testi h3 {
  color: #fff;
  padding-bottom: 50px;
  font-family: "Lato";
  padding-left: 10px;
  font-weight: bold;
  text-transform: uppercase;
  font-size: 30px;
}

#t1 {
  width: 100%;
  height: 100%;
  display: block;
  opacity: 0.7;
  padding-left: 10px;
  padding-bottom: 30px;
}

.testi blockquote {
  padding-left: 30px;
  color: #fff;
  font-family: "Karla";
  position: relative;
  margin-top: -130px;
  line-height: 1.3;
  padding-bottom: 10px;
  font-size: 16px;
}
.testi p {
  color: #d69e3d;
  font-family: "Karla";
  padding-left: 30px;
  position: relative;
  text-transform: uppercase;
  font-size: 20px;
}

/*testimonials 2 customization */
#t2 {
  padding-top: 60px;
  width: 100%;
  height: 100%;
  display: block;
  opacity: 0.7;
  padding-left: 10px;
  padding-bottom: 10px;
}
/*testimonials 3 customization */
#t3 {
  padding-top: 80px;
  width: 100%;
  height: 100%;
  display: block;
  opacity: 0.7;
  padding-left: 10px;
  padding-bottom: 90px;
}

.testi3 {
  position: relative;
}

.testi3 blockquote {
  position: absolute;
  bottom: 160px;
  padding-left: 30px;
  color: #fff;
  font-family: "Karla";
  line-height: 1.3;
  font-size: 16px;
}

.testi3 p {
  position: absolute;
  bottom: 130px;
  padding-left: 30px;
  color: #d69e3d;
  font-family: "Karla";
  text-transform: uppercase;
  font-size: 20px;
}

/* footer customization */

footer {
  color: white;
  font-family: "Karla";
  font-size: 16px;
  text-align: center;
  padding-top: 20px;
  padding-bottom: 50px;
}

hr {
  opacity: 0.3;
  margin-left: 10px;
  margin-right: 10px;
}

/* min-width media query for the screen size of 768px and above  */

@media (min-width: 768px) {

  .wrapper h1 {
    padding-left: 80px;
    padding-right: 80px;
    font-size: 47px;
    margin-top: -10px;
    line-height: 1.2;
  }

  .wrapper p {
    font-size: 16px;
    padding-left: 35px;
    padding-right: 35px;
    padding-bottom: 10px;

  }

  .house h2 {
    font-size: 18px;
  }

  .house h3 {
    font-size: 39px;
    margin-right: 200px;
    font-weight: bold;
  }
  



  





















}

